--- a/package.json
+++ b/package.json
@@ -5,10 +5,21 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
+        "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vite": "^4.0.0"
+        "sass": "^1.56.1",
+        "vite": "^4.0.0",
+        "pinia": "^2.0.28",
+        "vue-router": "^4.1.6"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^4.0.0",
+        "path": "^0.12.7",
+        "vue": "^3.2.36",
+        "vue-loader": "^17.0.1"
     }
 }
